# rofl-x402-service

./: .env.example  .gitignore  README.md  compose.yaml  rofl.yaml
app/: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  gaia_provider.py  main.py  ollama_provider.py  pyproject.toml  signing.py  test_signing.py
test/: .env.example  README.md  test_client.py
